--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="vBTFPPGv25QPN56MEEgObEKxtUxQlNxpggDgCIbVomw" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VPH CITY V1 | Los Angeles Crimes Server</title>
