--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" href="energy.png" type="image/x-icon">
 <meta name="description" content="Official VPH CITY V1 Los Angeles Crimes Server. Join our roleplay and chaos community!">
 <meta name="keywords" content="LAC, Los Angeles Crimes, VPH CITY, Roleplay, Server">
   <meta name="google-site-verification" content="vBTFPPGv25QPN56MEEgObEKxtUxQlNxpggDgCIbVomw" />
