--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="energy.png" type="image/png">
-<meta name="description" content="Official VPH CITY V1 Los Angeles Crimes Server. Join our roleplay and chaos community!">
-<meta name="keywords" content="LAC, Los Angeles Crimes, VPH CITY, Roleplay, Server">
+<!-- Favicon -->
+<link rel="icon" href="https://vphcity.github.io/VPH-CITY-V1/vph-favicon.png" type="image/png">
+
+<!-- Open Graph (image for social & rich previews) -->
+<meta property="og:image" content="https://vphcity.github.io/VPH-CITY-V1/vph-og.png">
+<meta property="og:title" content="VPH CITY V1 | Los Angeles Crimes Server">
+<meta property="og:description" content="Join VPH CITY V1 — Los Angeles Crimes roleplay server.">
+<meta property="og:url" content="https://vphcity.github.io/VPH-CITY-V1/">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="description" content="VPH CITY V1 هو واحد من أقوى سيرفرات لعبة Los Angeles Crimes (LAC). انضم إلى عالم الدور التمثيلي RP واستمتع بالقيادة، القتال، والتفاعل مع اللاعبين في مدينة لوس أنجلوس الواقعية.">
+<meta name="keywords" content="Los Angeles Crimes, LAC Online, VPH CITY V1, LAC Roleplay Server, LAC RP, LAC Server, Los Angeles Crimes server, VPH RP, LAC multiplayer, VPH CITY LAC, VPH city roleplay, سيرفر لوس أنجلوس كرايمز, سيرفرات LAC, سيرفر VPH CITY, لوس أنجلوس كرايمز أونلاين, VPH roleplay , سيرفرات RP, سيرفرات لوس أنجلوس">
   <meta name="google-site-verification" content="vBTFPPGv25QPN56MEEgObEKxtUxQlNxpggDgCIbVomw" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
