--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="https://vphcity.github.io/VPH-CITY-V1/vph-favicon.png" type="image/png">
 
 <!-- Open Graph (image for social & rich previews) -->
-<meta property="og:image" content="https://vphcity.github.io/VPH-CITY-V1/vph-og.png">
+<meta property="og:image" content="https://vphcity.github.io/VPH-CITY-V1/vpoh-og.png">
 <meta property="og:title" content="VPH CITY V1 | Los Angeles Crimes Server">
 <meta property="og:description" content="Join VPH CITY V1 — Los Angeles Crimes roleplay server.">
 <meta property="og:url" content="https://vphcity.github.io/VPH-CITY-V1/">
