--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="vpoh-og.png">
 <!-- Favicon -->
 <link rel="icon" href="https://vphcity.github.io/VPH-CITY-V1/vph-favicon.png" type="image/png">
 
