--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <link rel="icon" href="https://vphcity.github.io/VPH-CITY-V1/vph-favicon.png" type="image/png">
 
 <!-- Open Graph (image for social & rich previews) -->
-<meta property="og:image" content="https://vphcity.github.io/VPH-CITY-V1/vpoh-og.png">
+<meta property="og:image" content="https://vphcity.github.io/VPH-CITY-V1/vph-og.png">
 <meta property="og:title" content="VPH CITY V1 | Los Angeles Crimes Server">
 <meta property="og:description" content="Join VPH CITY V1 — Los Angeles Crimes roleplay server.">
-<meta property="og:url" content="https://vphcity.github.io/VPH-CITY-V1/">
+<meta property="og:url" contentvpoh-og.pnghttps://vphcity.github.io/VPH-CITY-V1/">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="description" content="VPH CITY V1 هو واحد من أقوى سيرفرات لعبة Los Angeles Crimes (LAC). انضم إلى عالم الدور التمثيلي RP واستمتع بالقيادة، القتال، والتفاعل مع اللاعبين في مدينة لوس أنجلوس الواقعية.">
@@ -125,7 +125,7 @@
       <ul>
         <li><a href="#" onclick="showPage('home')">Home</a></li>
         <li><a href="#" onclick="showPage('server')">Server</a></li>
-        <li><a href="#" onclick="showPage('tiktok')">TikTok</a></li>
+        <li><a href="#" onclick="showPage('youtube')">YouTube </a></li>
         <li><a href="#" onclick="showPage('telegram')">Telegram</a></li>
       </ul>
     </nav>
@@ -147,10 +147,10 @@
       <a href="#" class="btn">Join Now</a>
     </div>
 
-    <div id="tiktok" class="content" style="display:none;">
-      <h2>Our TikTok</h2>
+    <div id="youtube" class="content" style="display:none;">
+      <h2>YouTube</h2>
       <p></p>
-      <a href="https://tiktok.com/@vph_city_v1" target="_blank" class="btn">Open TikTok</a>
+      <a href="https://www.youtube.com/@NoxCrime67" target="_blank" class="btn">Open YouTube</a>
     </div>
 
     <div id="telegram" class="content" style="display:none;">
@@ -171,4 +171,4 @@
     }
   </script>
 </body>
-</html>
+  </html>
