--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <p>• Type: Roleplay</p>
       <p>• Max Players: 16</p>
       <p>•  Los Angeles</p>
-      <p>• </span></p>
+      <p class="gr">•Online </span></p>
       <a href="#" class="btn">Join Now</a>
     </div>
 
